2.??    ????-??-??

  - added simple test for message modifier (response to bug from ABH)
  - use File::Spec->path for path, not ENV{PATH} (bug 20109, Simon Flack)
  - use Symbol.pm, not global filehandles
  - plan all tests
  - remove use warnings
  - undef is never a valid message
  - improve testing

2.11    2006-07-05

  - fixed bug introduced in 2.10; message modifiers were broken
    thanks ABH

2.10    2006-07-03

  - improve portability of sendmail.t (rjbs)
  - fix bugs with plugins outside Email::Send:: (rjbs)
  - allow objects as mailers (rjbs)
  - clarify documentation (rjbs)
  - improve backwards compat with Email::Send 1 (see no-import.t) (rjbs)

2.05    2006-04-20

  - Removed UNIVERSAL::require use.

2.04    2006-01-28

  - Integrated Email::Send::Test (Adam Kennedy).

2.03    2006-01-28

  - Updated tests to only check the interface of distributed mailers.
  - Updated Email::Send::Sendmail to provide much more detail when mail fails
    to send. (Dave Rolksy and Casey West).

2.01    2006-01-17

  - Updated tests to only check distributed mailers.
  - Updated version numbers in all packages for proper indexing.

2.00    2005-12-15

  - Grafted Classic interface but did not document it.

1.99_01    2005-05-09

  - Major changes to API.
  - Changes to Makefile.PL to aid in recommended module builds.
  - Alpha-release of new interface.

1.46   2005-01-08

  - SMTP was broken. I made a horrible mistake with my use of eval.
    Honestly, I feel quite silly. I'm sorry.
  - Added eg/send-email.pl, a program to aid in testing and debuging
    of this code.

1.45   2004-12-22

  - Bug in Email::Send::SMTP in collecting addresses to send for RCPT.
  - Added more error checking in Email::Send::SMTP to return proper
    diagnostics.
  - Updated dependencies.

1.44   2004-12-17

  - Make Email::Send::SMTP use Return::Value for its returns. These
    are compatible with previous behavior, but offer more detail on
    just what went wrong.